# cvl

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/helloCvlCore/: CMakeLists.txt  main.cpp
applications/helloCvlProcessing/: CMakeLists.txt  main.cpp
applications/imageAllocatorComparison/: CMakeLists.txt  main.cpp
applications/qtImageViewer/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  main.cpp
cmake/: SuperBuild.cmake
cmake/.NetSupport/: CppCliSupport.cmake  DotNetSupport.cmake
cmake/Checks/: CppCheck.cmake  NugetCheck.cmake  OpenCppCoverageCheck.cmake
cmake/Common/: Common.cmake  CompanyInfo.cmake  CompilerFlags.cmake  CopyRuntimeDependencies.cmake  VersionInfo.cmake
cmake/Templates/: VERSIONINFO_OFFICIAL.rc.in
libraries/: CMakeLists.txt
libraries/cvl/: CMakeLists.txt
libraries/cvl/core/: CMakeLists.txt
libraries/cvl/core/benchmark/: CMakeLists.txt
libraries/cvl/core/benchmark/common/: CMakeLists.txt
libraries/cvl/core/benchmark/common/src/: benchmark_cvl_common.cpp
libraries/cvl/core/benchmark/image/: CMakeLists.txt
libraries/cvl/core/benchmark/image/src/: benchmark_cvl_image.cpp
libraries/cvl/core/benchmark/src/: benchmark_cvl_core.cpp
libraries/cvl/core/include/: Core.h
libraries/cvl/core/include/cvl/core/: AccessTraits.h  AlignedAllocator.h  Alignment.h  CallOnce.h  Compare.h  ConsoleLoggingBackend.h  Contour.h  ContourTraits.h  CrtpBase.h  DebugMemoryResource.h  DimensionTraits.h  Ellipse.h  Error.h  Handle.h  ILogger.h  Image.h  ImageTraits.h  Line.h  NormTraits.h  ObserverHandle.h  Point.h  Rectangle.h  Region.h  RegionTraits.h  Size.h  SpinLock.h  SynchronizedQueue.h  Time.h  Types.h  Vector.h  macros.h
libraries/cvl/core/src/: ConsoleLoggingBackend.cpp  Ellipse.cpp  Error.cpp  Handle.cpp  ILogger.cpp  Logger.cpp  Logger.h  Time.cpp  VirtualTables.cpp
libraries/cvl/core/test/: CMakeLists.txt
libraries/cvl/core/test/src/: test_AccessTraits.cpp  test_AlignedAllocator.cpp  test_Alignment.cpp  test_Compare.cpp  test_Contour.cpp  test_DimensionTraits.cpp  test_Ellipse.cpp  test_Error.cpp  test_Handle.cpp  test_Image.cpp  test_Line.cpp  test_Logger.cpp  test_NormTraits.cpp  test_ObserverHandle.cpp  test_Point.cpp  test_Rectangle.cpp  test_Region.cpp  test_Size.cpp  test_SynchronizedQueue.cpp  test_Vector.cpp
libraries/cvl/processing/: CMakeLists.txt
libraries/cvl/processing/benchmark/: CMakeLists.txt
libraries/cvl/processing/benchmark/threshold/: CMakeLists.txt
libraries/cvl/processing/benchmark/threshold/src/: benchmark_cvl_threshold.cpp
libraries/cvl/processing/include/: Processing.h
libraries/cvl/processing/include/cvl/processing/: Area.h  BoundingBox.h  Center.h  ColumnFilter.h  ConnectedComponents.h  Filter1D.h  Filter2D.h  FilterCoefficients.h  FilterOperation.h  RowFilter.h  Smoothing.h  Test.h  Threshold.h
libraries/cvl/processing/src/: FilterCoefficients.cpp  Test.cpp
libraries/cvl/processing/test/: CMakeLists.txt
libraries/cvl/processing/test/src/: test_Area.cpp  test_BoundingBox.cpp  test_Center.cpp  test_ConnectedComponents.cpp  test_FilterCoefficients.cpp  test_Smoothing.cpp  test_Threshold.cpp
